<resources>
    <string name="app_name">OAuth</string>
    <string name="usuario">Usuario</string>
    <string name="credenciales">Credenciales</string>
    <string name="clave">Clave</string>
    <string name="entrar">Entrar</string>
    <string name="bienvenido">Bienvenido..</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="file_preferencia">dgtic.unam.autentifiacion.PREFERENCE_FILE_KEY</string>


    <string name="facebook_app_id">1162032908016751</string>
    <string name="fb_login_protocol_scheme">fb1162032908016751</string>
    <string name="facebook_client_token">f01bc8950d34aa24b0e4414273fc97ac</string>


</resources>